# cash_game_tracker

./: .env  .env.docker.template  .env_template  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  apply_permissions_migration.py  db_alter.py  docker-compose.yml  games.json  games.ods  init-db.sql  justfile  main.py  migrate_owners.py  pyproject.toml  refactor.py
.github/workflows/: deploy.yml
backend/: main.py
backend/apis/: base.py  utils.py
backend/apis/v1/: route_login.py  route_users.py
backend/core/: bayes.py  config.py  hashing.py  security.py
backend/db/: base.py  session.py
backend/db/models/: add_on.py  associations.py  buy_in.py  cash_out.py  chip.py  chip_amount.py  chip_structure.py  game.py  player_request_status.py  team.py  team_role.py  user.py  user_game.py  user_team.py  user_verification.py  users.py
backend/db/repository/: add_on.py  addon.py  buy_in.py  buyin.py  cash_out.py  chip.py  chip_structure.py  doctors.py  game.py  practices.py  team.py  user.py  user_verification.py  working_hours.py
backend/db/tools/: CIRCULAR_DEPENDENCY_FIX.md  MIGRATION_GUIDE.md  README.md  SUMMARY.md  add_missing_columns.py  add_missing_columns.sql  check_tables.py  nuclear_reset.py  (+3 more)
backend/schemas/: add_on.py  cash_out.py  chip_amount.py  chip_structure  chip_structure.py  chips.py  games.py  players.py  team.py  user.py
backend/scripts/: add_book_keeper_col.py  add_team_default_cs.py  convert_ods_to_json.py  fix_polish_emails.py  fix_sequences.py  import_legacy.py
backend/tests/: conftest.py  test_user.py
backend/webapps/: base.py  home.py
docs/: CLEANUP_SUMMARY.md  DATABASE_MIGRATION.md  DATABASE_SEPARATION_SUMMARY.md  LOCAL_DEVELOPMENT.md  MIGRATION_FIX.md  RASPBERRY_PI_MIGRATION.md  TIME_WEIGHTING_SUMMARY.md
scripts/: README.md  add_book_keeper_column.py  check_databases.py  migrate_database.py  setup_database.py
(+105 files in other folders)
