[tool.poetry]
name = "cash-game-manager"
version = "0.1.0"
description = "Manage cash games"
authors = ["karol <forkarolm@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.22.0"
aiofile = "3.8.5"
python-dotenv = "1.0.0"
sqlalchemy = "2.0.13"
passlib = ">=1.7.4"
python-jose = "3.3.0"
python-multipart = "0.0.6"
fastapi-sessions = "^0.3.2"
psycopg2 = "^2.9.11"
greenlet = ">=3.0.3"
PyYAML = ">=6.0.1"
bcrypt = "<4.0"
fastapi = "^0.121.1"
pydantic = "^2.12.4"
gunicorn = "^23.0.0"
jinja2 = "^3.1.6"
fastapi-mail = "^1.6.1"
requests = "^2.32.5"
resend = "^2.19.0"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
mypy = "1.3.0"
isort = "5.12.0"
pre-commit = "3.3.1"


[tool.poetry.group.test.dependencies]
pytest = "7.3.1"
httpx = "0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
